fix: fix dark mode

--- a/base.css
+++ b/base.css
@@ -43,11 +43,6 @@ body {
   text-align: justify;
 }
 
-html {
-  background-color: #fff;
-  color: #000;
-}
-
 .main {
   margin: 50px auto 50px;
   padding: 1px;
