--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,8 +1,3 @@
-html {
-    background-color: $primaryColor;
-    color: $secondaryColor;
-}
-
 .main {
     margin: 50px auto 50px;
     padding: 1px;
